# phm

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: config.rs  discover.rs  downloader.rs  main.rs  multishell.rs  shell.rs  shim.rs  termux.rs  version.rs
src/commands/: default.rs  doctor.rs  env.rs  install.rs  list.rs  list_remote.rs  mod.rs  shim.rs  uninstall.rs  use_version.rs
