[package]
name = "phm"
version = "0.2.5"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
colored_text = "0.4.1"
anyhow = "1"
thiserror = "2"
libc = "0.2"
atty = "0.2.14"

[profile.release]
strip = true
lto = true
